Update 'rag3-aug13-1' component image to: quay.io/maysunfaisal/rag3-aug13-1:cb6b4d5ba25b48f82f2b44f220c2fb76a7866666@sha256:64e12358242fa20a2c0deb6a9b65289d332052c4dfc5a7e0fb006f97195fec9b

--- a/components/rag3-aug13-1/overlays/development/deployment-patch.yaml
+++ b/components/rag3-aug13-1/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rag3-aug13-1
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/maysunfaisal/rag3-aug13-1:cb6b4d5ba25b48f82f2b44f220c2fb76a7866666@sha256:64e12358242fa20a2c0deb6a9b65289d332052c4dfc5a7e0fb006f97195fec9b # use pre-built to bootstrap 
+          name: app-inference
